improved animations and update signal

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
   <title>Lemonade</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/semantic.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/animate.css" />
   <script>
     window.$ = window.jQuery = require('jquery');
   </script>
@@ -26,6 +27,8 @@
 </head>
 
 <body>
+  <div id="update-widget">
+  </div>
   <div class="ui container">
       <br/>
       <div id="mfa-view"></div>
